updated AuthProxyController.php, dropped cruft,
